Updated index.html file

--- a/Desktop/Fetch Lab (CodeGrade)/index.html
+++ b/Desktop/Fetch Lab (CodeGrade)/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>📚 Game of Thrones Book List</h1>
-  <main id="book-list"></main>
+  <main></main>
 
   <script src="index.js" defer></script>
 </body>
