Add index.html for Fetch Lab display

--- a/Desktop/Fetch Lab (CodeGrade)/index.html
+++ b/Desktop/Fetch Lab (CodeGrade)/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fetch Lab – Game of Thrones Books</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <h1>📚 Game of Thrones Book List</h1>
-  <main></main>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fetch Lab</title>
+  </head>
+  <body>
+    <h1>Book List</h1>
+    <ul id="book-list"></ul>
 
-  <script src="index.js" defer></script>
-</body>
+    <!-- Link to your JavaScript file -->
+    <script src="index.js"></script>
+  </body>
 </html>
