--- a/Desktop/Fetch Lab (CodeGrade)/index.html
+++ b/Desktop/Fetch Lab (CodeGrade)/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fetch Lab</title>
-</head>
-<body>
-  <h1>Book List</h1>
-  <ul id="book-list"></ul>
-
-  <script src="index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Fetch Lab</title>
+  </head>
+  <body>
+    <h1>Game of Thrones Books</h1>
+    <ul id="book-list"></ul>
+    <script src="index.js"></script>
+  </body>
 </html>
