updated index.html file

--- a/Desktop/Fetch Lab (CodeGrade)/index.html
+++ b/Desktop/Fetch Lab (CodeGrade)/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch Lab</title>
   </head>
   <body>
     <h1>Game of Thrones Books</h1>
     <ul id="book-list"></ul>
+
+    <!-- Load JS after the DOM elements -->
     <script src="index.js"></script>
   </body>
 </html>
