--- a/Desktop/Fetch Lab (CodeGrade)/index.html
+++ b/Desktop/Fetch Lab (CodeGrade)/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fetch Lab</title>
-  </head>
-  <body>
-    <h1>Game of Thrones Books</h1>
-    <ul id="book-list"></ul>
-    <script src="index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Fetch Lab</title>
+</head>
+<body>
+  <h1>Game of Thrones Books</h1>
+  <main></main>
+  <script src="index.js"></script>
+</body>
 </html>
